--- a/bariloche.html
+++ b/bariloche.html
@@ -8,6 +8,7 @@
 	<link rel="shourcut icon" type="image/x-icon" href="img/lente.png">
 	<link rel="stylesheet" type="text/css" href="css/stylesBariloche.css">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+	<script src="operaciones.js"></script>
 
     </iframe>
     </div>
@@ -45,6 +46,8 @@
 			<img src="images/image (4).jpg" alt="">
 			<img src="images/image (5).jpg" alt="">
 			<img src="images/image (6).jpg" alt="">
+
+			
 
 
 
