--- a/me.html
+++ b/me.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,6 +7,7 @@
 	<link rel="shourcut icon" type="image/x-icon" href="img/lente.png">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+	<script src="operaciones.js"></script>
 
     </iframe>
     </div>
@@ -39,16 +39,16 @@
 	<aside>
 			<header>
 				<h1>La emoción ha deletreado el éxtasis.</h1>
-				<p>Recuerda mirar las estrellas & no bajo tus pies. Trata de comprender lo que ves & maravillate con aquello que hace que el universo exista. Se curioso. Y por mas dura que parezca la vida, siempre habrá algo que puedas hacer y en lo que triunfar. Lo que importa es que no te rindas. Stephen Hawking </p>
+				<p>Recuerda mirar las estrellas & no bajo tus pies. Trata de comprender lo que ves & maravillate con aquello que hace que el universo exista.<br> Se curioso. Y por mas dura que parezca la vida, siempre habrá algo que puedas hacer y en lo que triunfar. Lo que importa es que no te rindas. Stephen Hawking </p>
 			</header>
 	</aside>
 
 	<div class="chan">
 		<img src="img/jim.gif">
 		<h2>Page in development :3</h2>
+		<button onclick="hola()" >Boton 1</button>
+		<button onclick="adios()">Boton 2</button>
 	</div>
-		
-
 
 
 	<footer>
