--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,68 +7,29 @@
 	<link rel="shourcut icon" type="image/x-icon" href="img/lente.png">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-
-    </iframe>
-    </div>
-		<style>
-			body,
-				html {
-						min-height: 100%;
-					 }
-			body {
-   				background-image: url("img/x.jpg");
-    			background-repeat: no-repeat;
-    			background-size: cover;
-				}
-		</style>
+	<style>body,html {min-height: 100%;}body {background-image: url("img/x.jpg");background-repeat: no-repeat;background-size: cover;}</style>
 </head>
 
 <body>
-	<video src="video/spring.mp4" autoplay loop muted poster="img/flower.jpg"> </video>
-
+	<video src="video/awaken.mp4" autoplay loop muted poster="img/flower.jpg"> </video>
  	<section id="contenido">
-		<a title="Inicio" href="index.html"><img src="img/ever.png" title="Rerum System 0.1" alt="Aqui debe estar el logo"/></a>
+		<a title="Inicio" href="index.html"><img src="img/logo.png" title="Rerum System 0.1" alt="Aqui debe estar el logo"/></a>
 	</section>
 
-	<aside>
-			<header>
-				<h1>La emoción ha deletreado el éxtasis.</h1>
-				<p>Recuerda mirar las estrellas & no bajo tus pies. Trata de comprender lo que ves & maravillate con aquello que hace que el universo exista. Se curioso. Y por mas dura que parezca la vida, siempre habrá algo que puedas hacer y en lo que triunfar. Lo que importa es que no te rindas. Stephen Hawking </p>
-			</header>
-	</aside>
-
-	<section>
-		<article>
-			<a title="Bariloche" href="bariloche.html"><h1><P>Bariloche</P></h1></a>
-		</article>
-		<article>
-			<a title="Buenos Aires" href="buenosaires.html"><h1><P>Buenos Aires</P></h1></a>
-		</article>
-		<article>
-			<a title ="Industrial" href="industrial.html"><h1><P>Industrial</P></h1></a>
-		</article>
-		<article>
-			<a title ="People" href="life.html"><h1><P>People</P></h1></a>
-		</article>
-		<article>
-			<h1><P>Seattle</P></h1>
-		</article>
-		<article>
-			<h1><P>India</P></h1>
-		</article>
-		<article>
-			<h1><P>New Zealand</P></h1>
-		</article>
-		<article>
-			<h1><P>Turquía</P></h1>
-		</article>
 	
-		<article>
-			<h1><P>Software</P></h1>
-		</article>
-	</section>
+	<div class="principal">
+			<article><a title="Bariloche" href="bariloche.html"><h1><P>Bariloche</P></h1></a></article>
+			<article><a title="Buenos Aires" href="buenosaires.html"><h1><P>Buenos Aires</P></h1></a></article>
+			<article><a title ="Industrial" href="industrial.html"><h1><P>Industrial</P></h1></a></article>
+			<article><a title ="People" href="life.html"><h1><P>People</P></h1></a></article>
+			<article><h1><P>Seattle</P></h1></article>
+			<article><h1><P>India</P></h1></article>
+			<article><h1><P>New Zealand</P></h1></article>
+			<article><h1><P>Turquía</P></h1></article>
+			<article><h1><P>Software</P></h1></article>
+	</div>
 
-
+	
 	<footer>
 		<nav>
  			<ul>
