--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<footer>
 		<nav>
  			<ul>
- 				<li><a href="https://www.instagram.com/evertoujours/">Instagram</a></li>
- 				<li><a href="https://www.linkedin.com/in/ever-ruiz-diaz-37a7a196/">Linkedln</a></li>
-				<li><a href="me.html">Sobre mi</a></li>
+				<li><a href="https://github.com/ruizdiazever">GitHub</a></li>
+				<li><a href="https://www.linkedin.com/in/rerum/">Linkedln</a></li>
+				<li><a href="archives/cv_design_low.pdf">Sobre mi</a></li>
  			</ul>
  		</nav>
 
