Mejora de interfaz

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,14 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main_index.css">
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <video src="video/awaken.mp4" autoplay loop muted poster="img/flower.jpg"></video>
+    <video src="video/dark.mp4" autoplay loop muted poster="img/flower.jpg"></video> <!-- src es SOURCE -->
 
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
@@ -31,8 +32,8 @@
                         <a class="nav-link text-white" href="#header">Home</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link text-white" href="#redes">Portfolio</a>
-                        </li>
+                        <a class="nav-link text-white" href="#redes">Portfolio</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#header">Contact</a>
                     </li>
@@ -45,42 +46,141 @@
 
 
     <header id="header">
-            <div class="container mt-5 principal">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="header-content-left">
-                                <article><h2 id="me">Hola me llamo Ever & te doy la bienvenida a mi pagina de fotografia.</h3></article>
-                                <div id=header-texto>
-                                    <p class="color color-4">Es bueno a</p><p class="color color-2">mar</p>
-                                    <p class="color color-1">tanto como</p>
-                                    <p class="color color-5">se</p>
-                                    <p class="color color-2">pueda,</p>
-                                    <p class="color color-5">porque ahí</p>
-                                    <p class="color color-1">rad</p><p class="color color-5">ica</p>
-                                    <p class="color color-2">la</p>
-                                    <p class="color color-5">verdadera</p>
-                                    <p class="color color-2">fuerza</p><p class="color color-5">, y</p>
-                                    <p class="color color-3">el que mucho</p>
-                                    <p class="color color-4">ama</p>
-                                    <p class="color color-5">realiza</p>
-                                    <p class="color color-2">grandes</p>
-                                    <p class="color color-5">co</p><p class="color color-3">s</span><span class="color color-4">as.</span>
-                                </div>
-                                <div id="places">
-                                    <article><a title="Bariloche" href="bariloche.html"><h1 class="display-3"><P>Bariloche</P></h1></a></article>
-                                    <article><a title="Buenos Aires" href="buenosaires.html"><h1 class="display-3"><P>Buenos Aires</P></h1></a></article>
-                                    <article><a title="Industrial" href="industrial.html"><h1 class="display-3"><P>Industrial</P></h1></a></article>
-                                    <article><a title="People" href="people.html"><h1 class="display-3"><P>People</P></h1></a></article>
-                                    <article><h1 class="display-3"><P>Seattle</P></h1></article>
-                                    <article><h1 class="display-3"><P>India</P></h1></article>
-                                    <article><h1 class="display-3"><P>New Zealand</P></h1></article>
-                                    <article><h1 class="display-3"><P>Turquía</P></h1></article>
-                                    <article><h1 class="display-3"><P>Software</P></h1></article>
-                                </div>
+        <div class="container mt-5 principal">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="header-content-left">
+                        <article>
+                            <h2 id="me">¿Cuál de mis fotos es mi preferida?</h2>
+                        </article>
+                        <article>
+                            <h3 id="me">Una que voy a hacer mañana.</h3>
+                        </article>
+                        <div id=header-texto>
+                            <p class="color color-4">Es bueno a</p>
+                            <p class="color color-2">mar</p>
+                            <p class="color color-1">tanto como</p>
+                            <p class="color color-5">se</p>
+                            <p class="color color-2">pueda,</p>
+                            <p class="color color-5">porque ahí</p>
+                            <p class="color color-1">rad</p>
+                            <p class="color color-5">ica</p>
+                            <p class="color color-2">la</p>
+                            <p class="color color-5">verdadera</p>
+                            <p class="color color-2">fuerza</p>
+                            <p class="color color-5">, y</p>
+                            <p class="color color-3">el que mucho</p>
+                            <p class="color color-4">ama</p>
+                            <p class="color color-5">realiza</p>
+                            <p class="color color-2">grandes</p>
+                            <p class="color color-5">co</p><p class="color color-3">s</span><span class="color color-4">as.</span>
+                        </div>
+                        <div id="places">
+                            <article><a title="Bariloche" href="bariloche.html">
+                                    <h1 class="display-3">
+                                        <P>Bariloche</P>
+                                    </h1>
+                                </a></article>
+                            <article><a title="Buenos Aires" href="buenosaires.html">
+                                    <h1 class="display-3">
+                                        <P>Buenos Aires</P>
+                                    </h1>
+                                </a></article>
+                            <article><a title="Industrial" href="industrial.html">
+                                    <h1 class="display-3">
+                                        <P>Industrial</P>
+                                    </h1>
+                                </a></article>
+                            <article><a title="People" href="people.html">
+                                    <h1 class="display-3">
+                                        <P>People</P>
+                                    </h1>
+                                </a></article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Italy</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>New Zealand</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Seattle</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>India</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Tromsø</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Turquía</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Iceland</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Switzerland</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>China</P>
+                                </h1>
+                            </article>
+                            <article>
+                                <h1 class="display-3">
+                                    <P>Software</P>
+                                </h1>
+                            </article>
                         </div>
                     </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div id="derecho" class="header-content-right">
+                        <div class="container">
+                            <div class="row project">
+                                <div class="col-lg-4 col-md-4 offset-lg-1">
+                                    <img class="img-fluid" src="img/drone4.jpg" alt="">
+                                </div>
+                                <div class="col-lg-7 col-md-8">
+                                    <h2 class="mt-5 section-heading title">Dispositivos</h2>
+                                    <p>Equipos & dispositivos que utilizo, podras encontrar detalles & mi descripcion de cada dispositivo.</p>
+                                    <p><a href="equipment.html">Más información</a></p>
+                                </div>
+                            </div>
+
+
+                            <div class="row project">
+                                <div class="col-lg-4 col-md-4 offset-lg-1">
+                                    <img class="img-fluid" src="img/camera_2.jpg" alt="">
+                                </div>
+                                <div class="col-lg-7 col-md-8">
+                                    <h2 class="mt-5 section-heading title">Consejos</h2>
+                                    <p>Podras encontrar una guia rapida para tomar la mejor imagen en el momento & lugar adecuado.
+                                    </p>
+                                    <p><a href="http://google.com">Más información</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </header>
+    </header>
 
 
 
@@ -121,6 +221,18 @@
             origin: 'bottom',
             viewfactor: 0.2,
             delay: 500,
+        })
+
+        sr.reveal('#me', {
+            duration: 2000,
+            origin: 'top',
+            distance: '300px'
+        })
+
+        sr.reveal('#derecho', {
+            duration: 2000,
+            origin: 'top',
+            distance: '300px'
         })
 
         sr.reveal('#redes', {
